--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   font-family: "Oswald", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-bottom: 25px;
 }
 
 /* BEGIN HEADER STYLING */
@@ -123,7 +124,7 @@ section {
 
 /* Stylings for the social icons in case I use them elsewhere on the page */
 .social-icons {
-  flex: 1 1 40%;
+  flex: 1 1 25%;
   padding: 0 5%;
   margin: auto;
   flex-wrap: wrap;
@@ -132,7 +133,7 @@ section {
 }
 
 .social-icons ul {
-  flex: 0 0 50%;
+  flex: 0 0 25%;
   text-decoration: none;
   list-style-type: none;
   display: flex;
@@ -151,7 +152,7 @@ section {
 }
 
 .social-icons img {
-  max-width: 50%;
+  max-width: 25%;
 }
 
 #contact-email {
@@ -295,6 +296,8 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
+  position: absolute;
+  flex-shrink: 0;
 }
 
 footer p {
@@ -309,7 +312,6 @@ footer a {
 #footer-icons {
   flex: 1 0 20%;
   text-align: center;
-  margin-left: 13.33%;
 }
 
 #copyright {
