--- a/src/index.css
+++ b/src/index.css
@@ -290,23 +290,25 @@ section {
 /* BEGIN FOOTER STYLING */
 footer {
   padding: 1%;
-  background-color: #00adee;
-  color: white;
+  background-color: #f0edee;
+  color: black;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
   position: absolute;
   flex-shrink: 0;
+  box-shadow: 0 0px 5px grey;
 }
 
 footer p {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 footer a {
   text-decoration: none;
-  color: white;
+  color: black;
+  font-size: 16px;
 }
 
 #footer-icons {
