--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   margin-bottom: 25px;
+  min-height: 100%;
 }
 
 /* BEGIN HEADER STYLING */
@@ -203,11 +204,23 @@ section {
 }
 
 #about-me-text {
-  flex: 0 1 50%;
+  flex: 0 0 50%;
+  font-size: 20px;
+}
+
+#about-me-text p {
+  font-size: 20px;
+}
+
+#resume-link {
+  text-decoration: none;
+  color: #008bcc;
+  font-size: 20px;
 }
 
 #about-me-text h3 {
   margin: 15px 0;
+  font-size: 28px;
 }
 
 #about-me-text ul {
@@ -342,8 +355,6 @@ footer {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
-  position: absolute;
-  flex-shrink: 0;
   box-shadow: 0 0px 5px grey;
 }
 
