--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   font-family: "Oswald", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-bottom: 25px;
+  margin-bottom: 0;
   min-height: 100%;
 }
 
@@ -107,6 +107,7 @@ section {
 /* General stylings for section content */
 .section-content {
   margin: 0 13%;
+  margin-bottom: 2%;
   padding: 2%;
   display: flex;
   flex-wrap: wrap;
@@ -351,6 +352,8 @@ section {
 /* BEGIN FOOTER STYLING */
 footer {
   padding: 1%;
+  margin: auto;
+  margin-bottom: 0px;
   background-color: #f0edee;
   color: black;
   display: flex;
@@ -429,7 +432,6 @@ footer #contact-info {
 @media screen and (max-width: 768px) {
   header {
     margin: 0 auto;
-    width: 100%;
   }
 
   #logo {
@@ -513,6 +515,39 @@ footer #contact-info {
 
   .portfolio-item p {
     font-size: 10px;
+  }
+
+  #contact-form {
+    flex: 1 100%;
+  }
+
+  #contact-form label {
+    font-size: 14px;
+  }
+
+  #contact-form button {
+    margin: 5% auto;
+    width: 100%;
+  }
+
+  #contact-socials {
+    flex: 1 100%;
+  }
+
+  #copyright {
+    flex: 1 100%;
+    margin: 1% auto;
+    text-align: center;
+  }
+  #footer-icons {
+    flex: 1 100%;
+    margin: 1% auto;
+    text-align: center;
+  }
+  footer #contact-info {
+    flex: 1 100%;
+    margin: 1% auto;
+    text-align: center;
   }
 }
 @media screen and (max-width: 575px) {
