--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,11 @@ a {
   max-width: 100%;
 }
 
+header button {
+  text-decoration: none;
+  border: none;
+}
+
 header nav {
   flex: 1 1 49%;
   margin: 0;
@@ -72,14 +77,16 @@ nav ul li:hover {
   color: #00adee;
 }
 
-nav ul a {
+nav ul button {
+  border: none;
   color: black;
   font-weight: bold;
-  font-size: 1.25vw;
+  font-size: 1.4vw;
+  margin: 0 6%;
   text-decoration: none;
 }
 
-nav a:hover {
+nav button:hover {
   color: #00adee;
 }
 
@@ -452,6 +459,10 @@ footer #contact-info {
   #contact-text p {
     font-size: 16px;
   }
+
+  #contact-form button {
+    width: 30%;
+  }
 }
 
 @media screen and (max-width: 768px) {
@@ -486,6 +497,7 @@ footer #contact-info {
   header nav ul li {
     margin: 0 5%;
     padding: 0;
+    font-size: 14px;
   }
 
   header nav a {
@@ -551,7 +563,7 @@ footer #contact-info {
     font-size: 14px;
   }
 
-  #contact-form button {
+  #contact-form {
     margin: 5% auto;
     width: 100%;
   }
@@ -594,13 +606,13 @@ footer #contact-info {
     flex: 1 100%;
   }
 
-  header nav ul li {
-    font-size: 14px;
-  }
-
   header nav ul li a {
     margin: 0;
     padding: 0;
+  }
+
+  header nav button {
+    margin: 0 2%;
   }
 
   .section-heading h2 {
